2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Pass tags as std::string
	* src/ucommand.cc, src/uvariablename.cc: here.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Move the doc where it belongs: the header file.
	* src/uconnection.hh, src/uconnection.cc: here.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Local restyling
	* src/uvariablename.cc: here.
	Shorten and cut var scopes.
	Compute booleans as expressions instead of using statements.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	if for -> for
	* src/uvariable.cc: Iterate over empty structures just as on
	non-empty ones.
	And use useful identifiers.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Use #if 0 to comment out code
	* src/ugroup.cc: here.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	UVariable::UVarSet
	* src/utypes.hh (UVarSet): Move to...
	* src/uvariable.hh (UVariable::UVarSet): here.
	Adjust all uses.
	Remove tautologic (and incorrect) documentation.
	(setName): Move the implementations into the *.cc file.
	(uvalue.hh, ustring.hh): Remove the includes.
	Adjust all users that did not properly include uvalue.hh.
	* src/userver.cc (UServer::work): Remove the useless variable
	selfError. That frees us from additional includes.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	s/CMD_//
	* src/ucommand.hh (Type): Remove the CMD_ prefix.
	Adjust all uses.

	* src/parser/bison/ugrammar.y: More "tag" uses.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* src/ucommand.cc,
	* src/ucommandqueue.cc,
	* src/uexpression.cc,
	* src/uobj.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariablename.cc: Restyle. Formatting changes. Some potentially
	  dangerous default cases were removed. If they were intended, rewrite
	  them as:
	  default: /* skip */
	    break;
	  Meanwhile we have more compiler warnings about cases not handled in
	  switch.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Restyle.
	* src/ucommand.cc,