@@ -1,5 +1,10 @@
 2006-12-26  Akim Demaille  <akim.demaille@free.fr>
 
+	Shorten scopes
+	* src/ucommand.cc (UCommand_AT::execute): here.
+
+2006-12-26  Akim Demaille  <akim.demaille@free.fr>
+
 	Pass tags as std::string
 	* src/ucommand.cc, src/uvariablename.cc: here.
 
